; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_root.c_root_for_each_workspace.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_root.c_root_for_each_workspace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32, %struct.sway_output** }
%struct.sway_output = type { i32 }
%struct.sway_workspace = type opaque
%struct.sway_workspace.0 = type opaque

@root = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @root_for_each_workspace(void (%struct.sway_workspace*, i8*)* %0, i8* %1) #0 {
  %3 = alloca void (%struct.sway_workspace*, i8*)*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.sway_output*, align 8
  store void (%struct.sway_workspace*, i8*)* %0, void (%struct.sway_workspace*, i8*)** %3, align 8
  store i8* %1, i8** %4, align 8
  store i32 0, i32* %5, align 4
  br label %7

7:                                                ; preds = %30, %2
  %8 = load i32, i32* %5, align 4
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @root, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp slt i32 %8, %13
  br i1 %14, label %15, label %33

15:                                               ; preds = %7
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** @root, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load %struct.sway_output**, %struct.sway_output*** %19, align 8
  %21 = load i32, i32* %5, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.sway_output*, %struct.sway_output** %20, i64 %22
  %24 = load %struct.sway_output*, %struct.sway_output** %23, align 8
  store %struct.sway_output* %24, %struct.sway_output** %6, align 8
  %25 = load %struct.sway_output*, %struct.sway_output** %6, align 8
  %26 = load void (%struct.sway_workspace*, i8*)*, void (%struct.sway_workspace*, i8*)** %3, align 8
  %27 = bitcast void (%struct.sway_workspace*, i8*)* %26 to void (%struct.sway_workspace.0*, i8*)*
  %28 = load i8*, i8** %4, align 8
  %29 = call i32 @output_for_each_workspace(%struct.sway_output* %25, void (%struct.sway_workspace.0*, i8*)* %27, i8* %28)
  br label %30

30:                                               ; preds = %15
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %5, align 4
  br label %7

33:                                               ; preds = %7
  ret void
}

declare dso_local i32 @output_for_each_workspace(%struct.sway_output*, void (%struct.sway_workspace.0*, i8*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
